--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
-    
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-	  <meta name="keywords" content="Fishing, Fly Fishing">
-  	<meta name="author" content="Max Manjos">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="keywords" content="Fishing, Fly Fishing" />
+    <meta name="author" content="Max Manjos" />
     <title>Max's Fishing Site | Welcome</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div id="branding">
+          <h1>Max's Fishing Website</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">pictures</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
