--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
+<!--
+    This branch part2-body contains the beginnings of the index.html
+    Video: https://www.youtube.com/watch?v=Wm6CUkswsNw&feature=youtu.be
+   Location: 6:47 thru 14:20
+-->
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="keywords" content="Fishing, Fly Fishing" />
-    <meta name="author" content="Max Manjos" />
-    <title>Max's Fishing Site | Welcome</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Affordable and professional web design">
+	  <meta name="keywords" content="web design, affordable web design, professional web design">
+  	<meta name="author" content="Max Manjos">
+    <title>RWU Web Design | Welcome</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div id="branding">
-          <h1>Max's Fishing Website</h1>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">pictures</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+	  <header>
+ <div class="container">
+     <div id="branding">
+         <h1>RWU Web Design</h1>
+     </div>	
+     <nav>
+         <ul>
+             <li><a href="index.html">Home</a></li>
+             <li><a href="about.html">About</a></li>
+             <li><a href="services.html">Services</a></li>
+         </ul>
+     </nav>
+</div>
+	 </header>
   </body>
 </html>
