--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-	  <meta name="keywords" content="Fishing, Fly Fishing">
+    <meta name="description" content="Affordable and professional web design">
+	  <meta name="keywords" content="web design, affordable web design, professional web design">
   	<meta name="author" content="Max Manjos">
-    <title>Max's Fishing Site | Welcome</title>
+    <title>RWU Web Design | Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
