--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
+<!--
+    This branch part3-body shows the continued development of the index.html
+    showing the addition of the 'showcase' and 'newsletter' sections. 
+    *Note the use of the HTML input form and submit button in the newsletter section.
+    Video: https://www.youtube.com/watch?v=Wm6CUkswsNw&feature=youtu.be
+   Location: 14:08 thru 17:33
+-->
 <html>
-    
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Affordable and professional web design">
-	  <meta name="keywords" content="web design, affordable web design, professional web design">
-  	<meta name="author" content="Max Manjos">
-    <title>RWU Web Design | Welcome</title>
-    <link rel="stylesheet" href="./css/style.css">
-  </head>
   <body>
+    <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width" />
+      <meta
+        name="description"
+        content="Affordable and professional web design"
+      />
+      <meta
+        name="keywords"
+        content="web design, affordable web design, professional web design"
+      />
+      <meta name="author" content="Max Manjos" />
+      <title>RWU Web Design | Welcome</title>
+      <link rel="stylesheet" href="./css/style.css" />
+    </head>
   </body>
 </html>
