add newsletter sign up

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="keywords" content="Fishing, Fly Fishing" />
+    <meta name="keywords" content="web design, affordable web design, professional web design" />
     <meta name="author" content="Max Manjos" />
-    <title>Max's Fishing Site | Welcome</title>
+    <title>RWU Comsc 230 Web Design | Welcome</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <div class="container">
         <div id="branding">
-          <h1>Max's Fishing Website</h1>
+          <h1>RWU Web Design</h1>
         </div>
         <nav>
           <ul>
