--- a/index.html
+++ b/index.html
@@ -39,5 +39,35 @@
           </form>
         </div>
       </section>
+
+      <!-- Adding in the Boxes section under the newsletter section 
+The boxes are in a container class and each box has it's own div
+
+We also add the images to the img folder
+
+-->
+
+<section id="boxes">
+    <div class="container">
+      <div class="box">
+        <img src="./img/logo_html.png">
+        <h3>HTML5 Markup</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+      </div>
+      <div class="box">
+        <img src="./img/logo_css.png">
+        <h3>CSS3 Styling</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+      </div>
+      <div class="box">
+        <img src="./img/logo_brush.png">
+        <h3>Graphic Design</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <p>RWU Comsc230 Web Design, Copyright &copy; 2020</p>
+  </footer>
   </body>
 </html>
